--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "soundcloud-client-id-generator",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "get soundcloud client_id query parameter for using its api",
-  "main": "./dist/main.js",
+  "private": false,
+  "type": "module",
+  "types": "./build/main.d.ts",
+  "main": "./build/main.js",
+  "files": [ "build/**/*" ],
   "scripts": {
-    "test": "echo \"im NOT writing tests\" && exit 1"
+    "test": "echo \"im NOT writing tests\" && exit 1",
+    "prepublish": "tsc"
   },
   "repository": {
     "type": "git",
