--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "types": "./build/main.d.ts",
   "main": "./build/main.js",
-  "files": [ "build/**/*" ],
+  "files": [
+    "build/**/*"
+  ],
   "scripts": {
     "test": "echo \"im NOT writing tests\" && exit 1",
     "prepublish": "tsc"
@@ -20,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/crucials/soundcloud-client-id-generator/issues"
   },
-  "homepage": "https://github.com/crucials/soundcloud-client-id-generator#readme"
+  "homepage": "https://github.com/crucials/soundcloud-client-id-generator#readme",
+  "dependencies": {
+    "node-fetch": "^3.3.2",
+    "node-html-parser": "^6.1.11"
+  }
 }
